[metadata]
name = fuzzy-happiness
version = 0.1
summary = A tool for anonymizing sqlalchemy databases
description-file = README.md
author = Rackspace Australia
author-email = rcbau@lists.rackspace.com
url = https://github.com/rcbau/fuzzy-happiness
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    fuzzy_happiness

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    fhalchemy = fuzzy_happiness.sqlalchemy_fuzzify:main
    fhregexp = fuzzy_happiness.regexp_fuzzify:main
    fhsqlparse = fuzzy_happiness.sqlparse_fuzzify:main
    fhattributes = fuzzy_happiness.attributes:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
